After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692873 - GrlOperationOptions leaked in grl_source_get_media_from_uri()
GrlOperationOptions leaked in grl_source_get_media_from_uri()
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-30 12:34 UTC by Mike Ruprecht
Modified: 2013-01-30 14:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix this bug (662 bytes, patch)
2013-01-30 12:34 UTC, Mike Ruprecht
committed Details | Review

Description Mike Ruprecht 2013-01-30 12:34:29 UTC
Created attachment 234821 [details] [review]
Patch to fix this bug

media_from_uri_spec_free() doesn't unref spec->options.
Comment 1 Juan A. Suarez Romero 2013-01-30 14:56:38 UTC
commit a719f69707f4031917d98458966156ad12ac7d7e
Author: Mike Ruprecht <mike.ruprecht@collabora.co.uk>
Date:   Wed Jan 30 06:29:03 2013 -0600

    grl-source: Fix leak of GrlOperationOptions in _get_media_from_uri()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692873

 src/grl-source.c | 1 +
 1 file changed, 1 insertion(+)