grl-source: Fix leak of GrlOperationOptions in _get_media_from_uri()

https://bugzilla.gnome.org/show_bug.cgi?id=692873